--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-calendars": "^1.260.0",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-modal-layer": "^1.0.5",
     "react-native-reanimated": "^1.7.0",
