--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^3.2.2",
+    "@react-native-community/async-storage": "^1.7.1",
     "expo": "^36.0.2",
     "expo-font": "~8.0.0",
     "native-base": "^2.13.8",
