--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-calendars": "^1.260.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-image-picker": "^2.3.0",
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-modal-layer": "^1.0.5",
     "react-native-reanimated": "^1.7.0",
