--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@ant-design/react-native": "^3.2.2",
     "@react-native-community/async-storage": "^1.7.1",
     "expo": "^36.0.2",
+    "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-permissions": "~8.0.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
