--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-image-picker": "^2.3.0",
     "react-native-modal-dropdown": "^0.7.0",
     "react-native-modal-layer": "^1.0.5",
+    "react-native-picker-checkbox": "^2.0.2",
     "react-native-reanimated": "^1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.6.4",
