--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/react-native": "^3.2.2",
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-navigation/native": "^5.0.5",
     "expo": "^36.0.2",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
@@ -31,7 +32,8 @@
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-beta.1",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.1.1"
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
