--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "^2.0.0-beta.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1"
+    "react-navigation-stack": "^2.1.1",
+    "expo-linear-gradient": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
