--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-linear-gradient": "latest",
     "expo-permissions": "~8.0.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-autocomplete-input": "^4.1.0",
     "react-native-calendars": "^1.260.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^1.5.6",
@@ -33,8 +35,7 @@
     "react-native-screens": "^2.0.0-beta.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
-    "react-navigation-stack": "^2.1.1",
-    "expo-linear-gradient": "latest"
+    "react-navigation-stack": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
