--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-modal-layer": "^1.0.5",
     "react-native-picker-checkbox": "^2.0.2",
     "react-native-reanimated": "^1.7.0",
+    "react-native-responsive-screen": "^1.4.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-beta.1",
