--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "demoApp",
-    "slug": "demoApp",
+    "name": "my_kitchen_manager",
+    "slug": "my_kitchen_manager",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -24,7 +24,9 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.flagcamp.mykitchenmanager",
       "supportsTablet": true
-    }
+    },
+    "description": ""
   }
 }
