--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "7": "0.0.1",
     "@ant-design/react-native": "^3.2.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.3",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-navigation/native": "^5.0.5",
     "expo": "^36.0.2",
@@ -33,6 +37,8 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "^2.0.0-beta.1",
+    "react-native-svg": "^12.0.3",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1"
